<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HoroscopeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#3fff"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syne_mono"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:fontFamily="@font/syne_mono"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syne_mono"
            android:text="@string/account_number"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvnNum"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:fontFamily="@font/syne_mono"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syne_mono"
            android:text="@string/birth"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syne_mono"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syne_mono"
            android:text="@string/age"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAgeUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syne_mono"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syne_mono"
            android:text="@string/result_info"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHoroscopo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/syne_mono"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivHoroscope"
            android:layout_width="248dp"
            android:layout_height="109dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/pisces" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:fontFamily="@font/syne_mono"
            android:text="@string/result_info2"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHoroscopoChino"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:fontFamily="@font/syne_mono"
            android:textAlignment="center"
            android:textColor="#F4F4F4"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivChinese"
            android:layout_width="258dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/rat" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>